objects/Time_Tracking__c.object
<CustomObject>
    <description>Used to track percentage of time spent on various SFDC projects, tasks and maintenance.</description>
    <fields>
        <fullName>Avg_Hours_Week__c</fullName>
        <formula>Total_Hours__c / Week_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg Hours / Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Definitions__c</fullName>
        <formula>&quot;OOO = Out of Office&quot;
&amp;BR()&amp;
&quot;Support = Supporting SFDC End Users&quot;
&amp;BR()&amp;
&quot;Training = Training SFDC End Users&quot;
&amp;BR()&amp;
&quot;Run Time = SFDC Maintenance, Department Meetings, Personal Development&quot;
&amp;BR()&amp;
&quot;Business Improvement = Small Platform Improvements&quot;
&amp;BR()&amp;
&quot;Project = Major SFDC Development&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Definitions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <description>Function of the user who is recording time tracking.</description>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SFDC Administrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <description>Sums up hours from the weekly records.</description>
        <label>Total Hours</label>
        <summarizedField>Time_Tracking_Week__c.Total_Hours_for_Week__c</summarizedField>
        <summaryForeignKey>Time_Tracking_Week__c.Time_Tracking__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Week_Count__c</fullName>
        <description>The count of weekly records.</description>
        <label>Week Count</label>
        <summaryForeignKey>Time_Tracking_Week__c.Time_Tracking__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>The year the Time Tracking is occuring for.</description>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Time Tracking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Function__c</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>Time Tracking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Tracking</pluralLabel>
    <recordTypes>
        <fullName>Internal_Time_Tracking</fullName>
        <active>true</active>
        <description>Default Record Type for Internal Time Tracking</description>
        <label>Internal Time Tracking</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>